Deleted everything on body

--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
- <div style="background-color: coral;">
-     Welcome!
+     <div class="Top-Page">
+         <div>
+            First
+         </div id="impo">
+         <div>
+            Second
+        </div>
+        <div>
+           Third  
+        </div>
+     </div>
  </div>
 </body>
 </html>
