--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="styles.css" rel="stylesheet">
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>My webpage</title>
+   <link href="styles.css" rel="stylesheet">
+   <nav>
+      <ul>
+         <li>
+            Main
+         </li>
+         <li>
+            Info
+         </li>
+         <li>
+            Contacts
+         </li>
+      </ul>
+   </nav>
 </head>
+
 <body>
-     <div class="Top-Page">
-         <div>
-            First
-         </div id="impo">
-         <div>
-            Second
-        </div>
-        <div>
-           Third  
-        </div>
-     </div>
- </div>
+
 </body>
+
 </html>
